[package]
name = "substitution_pdf_to_json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lopdf = "0.26.0"

serde_json = "1.0.70"
serde = { version = "1.0.130", features = ["default", "derive", "rc"] }

tracing = "0.1"
tracing-subscriber = "0.3"
