[package]
name = "substitution_common"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lopdf = "0.26.0"

serde_json = "1.0.70"

tracing = "0.1"
tracing-subscriber = "0.3"

thiserror = "1.0.30"

[dependencies.uuid]
version = "0.8.2"
features = ["v4"]

[dependencies.serde]
version = "1.0.130"
features = ["default", "derive", "rc"]
